# Violet

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: Coin.hpp  Constants.hpp  Player.hpp  Renderable.hpp  Tile.hpp  Utility.hpp
src/: Coin.cpp  Player.cpp  Renderable.cpp  Tile.cpp  Utility.cpp  main.cpp
